test/tests/stages/7_compound_statements/valid/assign_to_self.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  {
  int
  identifier(a)
  =
  identifier(a)
  =
  const int(4)
  ;
  return
  identifier(a)
  ;
  }
  }
