test/tests/stages/7_compound_statements/invalid_semantics/double_define_after_scope.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  {
  identifier(a)
  =
  const int(5)
  ;
  }
  int
  identifier(a)
  =
  const int(2)
  ;
  return
  identifier(a)
  ;
  }
